# pygitai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pygitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pygitai.ini  pyproject.toml  setup.cfg
.pygitai/: .gitignore  config.ini
docs/: index.md
docs/api/: BaseJob.md  JobBase.md  LLMBase.md  LLMJobBase.md  ParserBase.md  PromptLine.md
docs/get_started/: CLICommands.md
docs/presets/: JobAutoStageAll.md  JobCodeReview.md  JobCommitBody.md  JobCommitTitle.md  JobFeedbackOnCommit.md  JobPreCommitHook.md
docs/usage/: cli-commands.md
docs/user-guides/: add-custom-jobs.md
docs/user_guides/: add_custom_jobs.md  add_custom_llm.md  overwrite_template_files.md
pygit/: cli.py
pygit/cmd/: __init__.py  commit.py  review.py
pygit/common/: __init__.py  config.py  git.py  llm.py  logger.py  utils.py
pygit/templates/prompts/openai/: commit_body_system.txt  feedback_on_commit_system.txt  pull_request_review_revision.txt  pull_request_review_system.txt
pygitai/: cli.py
pygitai/assets/: .gitignore  .pygitaiignore  config.ini
pygitai/assets/customization_templates/jobs/: base_job.py.jinja2  llm_job.py.jinja2
pygitai/assets/customization_templates/llm/: llm.py.jinja2
pygitai/cmd/: __init__.py  commit.py  customization.py  review.py  setup.py  setup_branch.py
pygitai/common/: __init__.py  config.py  db_api.py  exceptions.py  git.py  llm.py  utils.py
pygitai/common/jobs/: api.py  base.py  base_job.py  llm_job.py
pygitai/common/llm/: __init__.py  base.py  hugging_face.py  openai.py
pygitai/templates/prompts/openai/: commit_body_revision.jinja2  commit_body_system.txt  commit_title_revision.txt  commit_title_system.txt  commit_title_user.txt  feedback_on_commit_system.txt  feedback_on_commit_user.txt  pull_request_review_system.txt
tests/: __init__.py
tests/common/: test_git.py  test_utils.py
tests/common/jobs/: test_base.py
tests/common/llm/: test_openai.py
tests/fixtures/general/: .pygitaiignore
tests/fixtures/templates/: test_template_with_context.jinja2  test_template_without_context.jinja2
