[tool.poetry]
name = "pygit"
version = "0.0.1"
description = "A small package to optimize some git workflows"
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
