[tool.poetry]
name = "pygitai"
version = "0.0.1"
description = "A small package to optimize some git workflows"
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
