[metadata]
name = pygit
version = attr: pygit.__version__
author = JangasCodingplace
author_email = janisgoesser92@gmail.com
url = https://github.com/JangasCodingplace/pygit
description = A small package to optimize some git workflows
long_description = file: README.md
license = MIT
classifiers=
  "Intended Audience :: Developers"
  "Programming Language :: Python :: 3"
  "License :: OSI Approved :: MIT License"
  "Operating System :: OS Independent"


[options]
python_requires = >=3.10
packages = find:
include_package_data = true
install_requires =
  setuptools >= 58.1.0


[options.entry_points]
console_scripts =
  say-hello = pygit.say_hello:say_hello


[isort]
profile = black
default_section = THIRDPARTY
